--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
  <script>document.documentElement.className="xr_bgh0";</script>
  <link rel="stylesheet" href="Mduduzi_Ncube-ng_htm_files/xr_main.css">
  <link rel="stylesheet" href="Mduduzi_Ncube-ng_htm_files/xr_text.css">
+ <!--=============== FAVICON ===============-->
+ <link rel="shortcut icon" href="Mduduzi_Ncube-ng_htm_files/Mduduzi_Ncube-Nhliziyo-ngise.jpg" type="image/x-icon">
  <script>
  <!--
   var xr_bckgx=0,xr_bckgy=0;function xr_rx(){var ww=document.documentElement.clientWidth;
@@ -171,3 +173,4 @@
 <!--[if lt IE 7]><script src="Mduduzi_Ncube-ng_htm_files/png.js"></script><![endif]-->
 </body>
 </html>
+
