--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <meta property="og:title" content="Exciting Upcoming Release: Mduduzi Ncube's Nhliziyo Ngise">
  <meta property="og:description" content="Mduduzi Ncube is set to captivate music lovers with his upcoming single titled Nhliziyo Ngise, featuring an impressive lineup of talented artists: Fanatic SA, Stalin Matsitsa, Ayanda Art, and Caeser RSA. This highly anticipated track promises to resonate deeply with fans, showcasing Mduduzi's unique sound and the collaborative energy of these talented musicians.">
  <meta property="og:image" content="Mduduzi_Ncube-ng_htm_files/Mduduzi_Ncube-Nhliziyo-ngise.jpg">
- <meta property="og:url" content="https://mduduzi-ncube-blog.netlify.app/" />
+ <meta property="og:url" content="https://mduduzi-ncube-blog.netlify.app/">
  <script><!--
  if(navigator.userAgent.indexOf('MSIE')!=-1 || navigator.userAgent.indexOf('Trident')!=-1){ document.write('<link rel="stylesheet" href="Mduduzi_Ncube-ng_htm_files/xr_fontsie.css"/>');} 
  if(navigator.userAgent.indexOf('Android')!=-1){ document.write('<link rel="stylesheet" href="Mduduzi_Ncube-ng_htm_files/xr_fontsrep.css"/>');} 
@@ -173,4 +173,5 @@
 <!--[if lt IE 7]><script src="Mduduzi_Ncube-ng_htm_files/png.js"></script><![endif]-->
 </body>
 </html>
+
 
